frontend/src/components/Reviews/ReviewPage.css
.review-page-container {
    padding-top: 110px;
    margin: 0 auto;
    width: 75%;
    color: #333333;
}

.review-wrapper {
    display: flex;
}

.review-page-form {
    width: 100%;
    max-width: 100%;
}

#review-page-img {
    width: 100%;
}

.product-review-img {
    width: 35%;
    padding: 5px;
}

.review-form {
    width: 65%;
}

.review-page-header {
    font-size: 29px;
    margin: 0px 0px 8px;
}

.review-page-product-name {
    font-size: 29px;
    font-weight: 400;
    margin: 0px 0px 8px;
}

.display-name-input {
    width: 100%;
    padding: 9px 8px;
    font-size: 16px;
    border-radius: 0px;
    border: 1px solid rgb(136, 136, 136);
}

.rating-wrapper {
    margin: 16px 0px;
}

.rating-text {
    font-size: 23px;
    margin: 0px 0px 8px;
}

.write-review-text {
    font-size: 19px;
    margin: 0px 0px 8px;
    line-height: 1.25;
}

.title-input {
    padding: 9px 8px;
    width: 58%;
    font-size: 16px;
    border-radius: 0px;
    border: 1px solid rgb(136, 136, 136);
}

.summarize-text {
    color: rgb(136, 136, 136);
    font-size: 12px;
    margin-bottom: 12px;
}

.description-input {
    padding: 9px 8px;
    width: 58%;
    height: 140px;
    font-size: 16px;
    font-family: "Helvetica for Target", "Helvetica Neue", Helvetica, Arial, sans-serif;
    resize: none;
    border-radius: 0px;
    border: 1px solid rgb(136, 136, 136);
}

.desc-requirements {
    font-size: 12px;
    color: rgb(136, 136, 136);
    margin-top: -6px;
}

.submit-fine-print {
    padding: 10px 0px;
    margin-top: 10px;
    border-top: 0.6px solid rgb(136, 136, 136);
    font-size: 16px;
}

.review-page-buttons {
    display: flex;
    width: 29%;
    justify-content: flex-start;
    gap: 48px;
}

.review-page-cancel-button {
    border: none;
    height: 44px;
    background-color: rgb(204, 0, 0);
    color: white;
    font-weight: bold;
    font-size: 16px;
}

.review-page-cancel-button:hover {
    cursor: pointer;
    background-color: rgb(170, 0, 0);
}

.review-page-submit-button {
    border: none;
    height: 44px;
    background-color: rgb(204, 0, 0);
    color: white;
    font-weight: bold;
    font-size: 16px;
}

.review-page-submit-button:hover {
    cursor: pointer;
    background-color: rgb(170, 0, 0);
}

.single-review-container {
    border: 1px solid rgb(214, 214, 214);
    border-radius: 4px;
    margin: 16px 0px;
    padding: 20px;
    height: 200px;
    overflow: scroll;
}

.single-review-title {
    font-size: 19px;
    margin-bottom: 8px;
}

.single-review-display-name {
    font-size: 12px;
}

.single-review-body {
    font-size: 14px;
    margin-top: 16px;
}

#delete-review-button {
    background-color: transparent;
    border: none;
    padding: 6px;
    height: auto;
    font-size: 16px;
}

#delete-review-button:hover {
    cursor: pointer;
}

.review-top-line {
    display: flex;
    justify-content: space-between;
}

.review-following-text {
    color: rgb(184, 83, 0);
    margin-bottom: 8px;
}

.review-page-errors {
    display: flex;
    flex-direction: column;
    align-items: baseline;
}

.review-page-single-error {
    border: none;
    background-color: transparent;
    height: auto;
    width: auto;
    padding: 0px;
    text-decoration: underline;
    color: rgb(184, 83, 0);
    font-size: 16px;
    margin-bottom: 5px;
}

.review-page-single-error:hover {
    cursor: pointer;
    text-decoration: none;
}

